# johansen_cointegration

./: Cargo.toml  LICENSE  README.md  _flowchart.ai  ss.js
_temp/: SOLETH.csv  SOLUSD.csv
src/: adf.rs  main.rs
src/_old/data/: mod.rs  transformer.rs
src/_old/data/math/: adf.rs  mod.rs
src/_old/data/types/: mod.rs  ohlc.rs
src/_old/indicators/: adf.rs  lin_reg.rs  mod.rs
src/_old/util/: vec.rs
src/data/: file_stream.rs  mod.rs  reader.rs  rolling_window.rs  series.rs  transformer.rs
src/data/math/: adf.rs  matrix.rs  mod.rs
src/data/types/: matrix.rs  mod.rs  ohlc.rs
src/market/: stream.rs
src/market/types/: mod.rs  ohlc.rs
src/util/: vec.rs
