[package]
name = "johansen_cointegration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = ["serde"]}
csv = "1.3.0"
linreg = "0.2.0"
rayon = "1.8.0"
serde = { version = "1.0.195", features = ["derive"] }
throw = "0.1.7"
